tweeter section ui

--- a/app/assets/stylesheets/web/ost/winners/Twitter.scss
+++ b/app/assets/stylesheets/web/ost/winners/Twitter.scss
@@ -88,7 +88,7 @@ $animation-delay : 500ms;
       .slick-slide {
         margin-top: -20px;
         align-self: center;
-        &.slick-center {
+        &.custom-slick-center {
           margin-top: 0px;
           .twitter-user-img {
             width: 100px;
