--- a/app/assets/stylesheets/web/ost/winners/Stats.scss
+++ b/app/assets/stylesheets/web/ost/winners/Stats.scss
@@ -6,7 +6,7 @@
   .stats-value{
     margin: 0;
     color: $white;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     font-weight: $font-weight-bold;
   }
   .stats-desc{
@@ -22,12 +22,17 @@
   }
 
   .descriptive-icons {
-    width: 75px;
-    height: 75px;
+    width: 70px;
+    height: 70px;
 
     @media (max-width: map-get($grid-breakpoints, "lg") ) {
-      width: 50px;
-      height: 50px;
+      width: 45px;
+      height: 45px;
     }
+  }
+
+  .ost-icon{
+    height: 50px;
+    width: 36px;
   }
 }
