--- a/app/views/web/ost/winners/_stats.erb
+++ b/app/views/web/ost/winners/_stats.erb
@@ -49,8 +49,8 @@
       </div>
 
       <div class="row">
-        <div class="col-11 col-sm-12 mx-auto col-md-3 my-3 text-md-left">
-          <svg class="align-middle" style="height: 50px;width: 50px">
+        <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
+          <svg class="align-middle ost-icon">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
             </switch>
@@ -60,30 +60,30 @@
             <small class="stats-desc">AWARDED IN TOTAL</small>
           </div>
         </div>
-        <div class="col-11 col-sm-12 mx-auto col-md-3 my-3 text-md-left">
-          <svg class="align-middle" style="height: 50px;width: 50px">
+        <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
+          <svg class="align-middle ost-icon">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
             </switch>
           </svg>
           <div class="d-inline-block align-middle">
             <h4 class="stats-value" id="d6">0</h4>
-            <small class="stats-desc">FOR GRAND WINNER POC</small>
+            <small class="stats-desc">GRAND WINNER POC</small>
           </div>
         </div>
-        <div class="col-11 col-sm-12 mx-auto col-md-3 my-3 text-md-left">
-          <svg class="align-middle" style="height: 50px;width: 50px">
+        <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
+          <svg class="align-middle ost-icon">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
             </switch>
           </svg>
           <div class="d-inline-block align-middle">
             <h4 class="stats-value" id="d7">0</h4>
-            <small class="stats-desc">FOR SPECIAL RECOGNITION</small>
+            <small class="stats-desc">SPECIAL RECOGNITION</small>
           </div>
         </div>
-        <div class="col-11 col-sm-12 mx-auto col-md-3 my-3 text-md-left">
-          <svg class="align-middle" style="height: 50px;width: 50px">
+        <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
+          <svg class="align-middle ost-icon">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
             </switch>
