Twitter section: Switch positions of 1st element (kidtoken) with kwanda-element (because their logo doesn't look good there - also adjusted the order in the copy doc)

--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -7,26 +7,25 @@
       <div class="row">
         <div class="col-12 px-5">
           <%
-             twitter_users = [{
-                                desc: "Being a part of the growing developer community building on OST has been amazing. #osta2
-                                       Using OST KIT, here’s a look at what dev. teams from around the world were able to create in less than six weeks!",
-                                handle:"@Ostkidtoken",
-                                profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/ostkidtoken.jpg",
-                                link:"https://twitter.com/Ostkidtoken"
+             twitter_users = [
+                             {
+                               desc: "In just 6 weeks we built a Q&A platform from scratch! In this short time we integrated our own token economy powered by @OSTdotcom for rewarding good answers.",
+                               handle:"@kwandaDotMe",
+                               profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/kwandadotme.jpg",
+                               link:"https://twitter.com/kwandaDotMe"
                              },
                              {
                                desc: "I’m part of group of 142 others who are building a proof of concept for @OSTdotcom . I’m adding a token economy into Really Simple Store to facilitate “community selling.” Here’s my halfway video. Final video on May 25. #OSTa2",
                                handle:"@truedrewco",
                                profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/truedrewco.jpg",
                                link:"https://twitter.com/truedrewco"
-
                              },
                              {
-                               desc: "In just 6 weeks we built a Q&A platform from scratch! In this short time we integrated our own token economy powered by @OSTdotcom for rewarding good answers.",
-                             handle:"@kwandaDotMe",
-                                   profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/kwandadotme.jpg",
-                             link:"https://twitter.com/kwandaDotMe"
-
+                               desc: "Being a part of the growing developer community building on OST has been amazing. #osta2
+                                       Using OST KIT, here’s a look at what dev. teams from around the world were able to create in less than six weeks!",
+                               handle:"@Ostkidtoken",
+                               profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/ostkidtoken.jpg",
+                               link:"https://twitter.com/Ostkidtoken"
                              },
                              {
                                desc: "Final submission of our #OSTa2 project $OST Loyalty for @OSTdotcom is done. It is a free loyalty&reward addon for the #ecommerce software @cscart, using any #OST branded token. We hope this a a good step towards more #cryptocurrency adoption. #blockchain",
