Contact Us form error text

--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -13,7 +13,7 @@
             <div class="col-12 col-md-6">
               <div class="input-container">
                 <label>FIRST NAME</label>
-                <input class="input" id="first_name" type="text" name="first_name" value="" title="Full Name" required autocomplete="off" />
+                <input class="input" id="first_name" type="text" name="first_name" value="" title="First Name" required autocomplete="off" />
                 <span class="input-border"></span>
               </div>
               <div class="error" data-for="first_name"></div>
@@ -21,7 +21,7 @@
             <div class="col-12 col-md-6">
               <div class="input-container">
                 <label>LAST NAME</label>
-                <input type="text" id="last_name" class="input" name="last_name" title="Last Date" autocomplete="off" required/>
+                <input type="text" id="last_name" class="input" name="last_name" title="Last Name" autocomplete="off" required/>
                 <span class="input-border"></span>
               </div>
               <div class="error" data-for="last_name"></div>
@@ -61,7 +61,7 @@
               </div>
               <span class="font-weight-normal info-text">I agree to OST contacting me about OST KIT Alpha III, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" class="terms-link" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
             </label>
-            <div class="error text-center" data-for="ost_product_communicate"></div>
+            <div class="error" data-for="ost_product_communicate"></div>
           </div>
 
           <div class="form-group">
