--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -1,6 +1,6 @@
 <section class="container-fluid side-by-side">
 
-  <div class="row mt-5 mb-3">
+  <div class="row my-5 mb-3">
     <div class="container text-center">
       <h3>The Challenge</h3>
       <p>Easily run your ICO with our complete KYC/AML management solution. Ensure a smooth, safe, and secure whitelist experience. Leverage our back-end tools to manage applicants, process change requests, and comply with legal requirements. Quickly integrate our robust APIs into your end a  application. Follow our documentation, guides, and recipes that make building any blockchain experience simple and easy.</p>
@@ -42,6 +42,22 @@
                            {
                                :title => "Kevin Estrada",
                                :type  => "CEO"
+                           },
+                           {
+                             :title => "Kevin Estrada Kevin Estrada",
+                             :type  => "CEO"
+                           },
+                           {
+                             :title => "Kevin Estrada",
+                             :type  => "CEO"
+                           },
+                           {
+                             :title => "Kevin Estrada",
+                             :type  => "CEO"
+                           },
+                           {
+                             :title => "Kevin Estrada",
+                             :type  => "CEO"
                            }
                        ]
                    },
@@ -132,7 +148,7 @@
               </div>
             </div>
             <div class="col-12 col-md-5">
-              <p><%= data[:description]%></p>
+              <p class="mt-3 mt-md-0"><%= data[:description]%></p>
               <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
               <% if data[:participants].present? %>
                 <div class="participants-container blue mt-4">
@@ -156,7 +172,7 @@
       <div class="row side-by-side bg-sky-blue position-relative pt-5">
         <div class="ost-backward-triangle"></div>
         <div class="container py-5">
-          <h3 class="mb-4"><%= data[:title]%></h3>
+          <h3 class="my-5"><%= data[:title]%></h3>
           <div class="row">
             <div class="col-12 col-md-7 play-video order-sm-12">
               <div class="video-image">
@@ -175,7 +191,7 @@
               </div>
             </div>
             <div class="col-12 col-md-5 order-sm-1">
-              <p><%= data[:description]%></p>
+              <p class="mt-3 mt-md-0"><%= data[:description]%></p>
               <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
               <% if data[:participants].present? %>
                 <div class="participants-container sky-blue mt-4">
