--- a/app/assets/stylesheets/web/ost/winners/Signup.scss
+++ b/app/assets/stylesheets/web/ost/winners/Signup.scss
@@ -42,6 +42,7 @@
     padding: 0 0 5px;
     background-color: transparent;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 0;
   }
 
   .input ~ .input-border {
