--- a/app/assets/stylesheets/web/ost/winners/Signup.scss
+++ b/app/assets/stylesheets/web/ost/winners/Signup.scss
@@ -61,7 +61,7 @@
 
   .error{
     font-size: 12px;
-    color: #e7003b;
+    color: $crimson;
     padding: 2px 0;
     display: block;
     min-height: 25px;
