--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -32,6 +32,10 @@ $skeptic: #91C0AD !default;
 $side-bar-nav-width : 250px;
 $casal: #3C5056;
 $spray: #7DD5E4;
+$onahau: #C7EAED;
+$bismark: #4C6375;
+$powder-blue: #AFE1E3;
+$crimson: #E7003B;
 
 
 $grays: () !default;
