winners page minor change

--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -112,6 +112,8 @@
 
 <% content_for :end_js do %>
   <script type="text/javascript">
+    $(function(){
       winners.twitter.carousel.init();
+    });
   </script>
 <%end%>
