--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -156,7 +156,7 @@
                   <div class="participants-carousel">
                     <% data[:participants].each_with_index do |data, index| %>
                       <div class="item">
-                        <div><%= data[:title]%></div>
+                        <div class="participants-title text-truncate"><%= data[:title]%></div>
                         <small class="font-weight-light"><%= data[:type]%></small>
                       </div>
                     <%end%>
@@ -199,7 +199,7 @@
                   <div class="participants-carousel">
                     <% data[:participants].each_with_index do |data, index| %>
                       <div class="item">
-                        <div><%= data[:title]%></div>
+                        <div class="participants-title text-truncate"><%= data[:title]%></div>
                         <small class="font-weight-light"><%= data[:type]%></small>
                       </div>
                     <%end%>
