--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -3,121 +3,103 @@
   <div class="row my-5 mb-3">
     <div class="container text-center">
       <h3>The Challenge</h3>
-      <p>Easily run your ICO with our complete KYC/AML management solution. Ensure a smooth, safe, and secure whitelist experience. Leverage our back-end tools to manage applicants, process change requests, and comply with legal requirements. Quickly integrate our robust APIs into your end a  application. Follow our documentation, guides, and recipes that make building any blockchain experience simple and easy.</p>
+      <p>OST KIT⍺ Phase II is a developer-focused private Alpha in which accepted developers will be given access to a sandbox environment of OST KIT where they can integrate any website or app to build a Proof of Concept (POC). Development teams applied by submitting a description of their proposed POC project and their team’s capabilities to us by 6 April, 2018. Each team needed to submit a summary of their POC, a halfway status update video and final accompanying video that addressed highlighted the team's vision for the POC as well as showing a working live demo running transactions using OST KIT.</p>
+      <p>For more details on the rules of eligibility for Alpha Phase II, read our kickoff blog post.</p>
     </div>
   </div>
 
 <%
 
   side_by_side =  [{
-                           :title => "The Grand Winner: kidtoken",
-                           :description => "It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.",
-                           :youtube_img => "https://dummyimage.com/640x360/ada4ad/121429",
-                           :youtube_link => "https://www.youtube.com/embed/lBKMmCQVUdo?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :title => "Ready-to-ship PoC: Kwanda",
+                           :description => "Kwanda is a Q&A platform with a built in token economy. Users can set a specific reward value to a question allowing for receiveing and rewarding more high quality answers.",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda.png",
+                           :youtube_link => "https://www.youtube.com/embed/j9E90BxUBoI?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :project_link => "http://kwanda.me",
                            :participants => [
                            {
-                               :title => "Kevin Estrada Kevin Estrada",
-                               :type  => "CEO"
+                               :title => "Marc Heiduk",
+                               :type  => "Web developer from Austria"
                            },
                            {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
-                           },
-                           {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
-                           },
-                           {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
+                               :title => "Anton Porsche",
+                               :type  => "Web developer from Germany"
                            }
                           ]
                         },
                          {
-                           :title => "The Grand Winner: kidtoken",
-                           :description => "It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.",
-                           :youtube_img => "https://dummyimage.com/640x360/444444/ffffff",
-                           :youtube_link => "https://www.youtube.com/embed/lBKMmCQVUdo?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :title => "Best motion picture: kidToken",
+                           :description => "kidtoken is the first tokenized cryptocurrency for kids that also offers parents & teachers the ability to incentivize positive behaviors such as good grades, kindness and eating healthy. The platform is a scalable concept aimed at a massive audience, one that’s growing up familiar with digital economies.",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :project_link => "https://www.kidtoken.org",
                            :participants => [
                            {
-                               :title => "Kevin Estrada",
+                               :title => "Scott Connors",
                                :type  => "CEO"
                            },
                            {
-                             :title => "Kevin Estrada Kevin Estrada",
-                             :type  => "CEO"
+                             :title => "Casie Connors",
+                             :type  => "CFO"
                            },
                            {
-                             :title => "Kevin Estrada",
-                             :type  => "CEO"
+                             :title => "Chance Chapman",
+                             :type  => "CTO"
                            },
                            {
-                             :title => "Kevin Estrada",
-                             :type  => "CEO"
+                             :title => "Michael Murray",
+                             :type  => "President of Marketing"
                            },
                            {
-                             :title => "Kevin Estrada",
-                             :type  => "CEO"
+                             :title => "Cassidi Murray",
+                             :type  => "Community Manager"
+                           },
+                           {
+                             :title => "David Bobr",
+                             :type  => "Business Development Manager"
                            }
-                       ]
-                   },
+                           ]
+                         },
                          {
-                           :title => "The Grand Winner: kidtoken",
-                           :description => "It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.",
-                           :youtube_img => "https://dummyimage.com/640x360/ada4ad/121429",
-                           :youtube_link => "https://www.youtube.com/embed/lBKMmCQVUdo?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :title => "Best UX: David Rios, Senior Game Developer",
+                           :description => "The goal of HARD is to replace the use of in-game fiat currency. The biggest advantage of a blockchain based economy is that the users are the real owners of their tokens and that it’s transparent how each user is interacting with the economy. Users can use HARD across multiple games and they can make sure that tokens will not disappear, so they are more motivated to convert real money to tokens.",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-hard-gaming.png",
+                           :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :project_link => "https://www.kidtoken.org",
                            :participants => [
                              {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
-                             },
-                             {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
+                               :title => "David Rios",
+                               :type  => "Senior Game Developer"
                              }
                            ]
                          },
                          {
-                           :title => "The Grand Winner: kidtoken",
-                           :description => "It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.",
-                           :youtube_img => "https://dummyimage.com/640x360/444444/ffffff",
-                           :youtube_link => "https://www.youtube.com/embed/lBKMmCQVUdo?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :title => "Most innovative: Coner",
+                           :description => "The motivation behind Coner is the problem of limited efficiency of publications search in digital libraries. Coner is an interactive document viewer that visualises automatically extracted keywords in research papers and allows users to rate and add new keywords.",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-coner.png",
+                           :youtube_link => "https://www.youtube.com/embed/G-bMkp8tm-A?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :project_link => "https://coner-viewer.herokuapp.com/viewer",
                            :participants => [
                              {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
-                             },
-                             {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
-                             },
-                             {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
+                               :title => "Daniel Vliegenthart",
+                               :type  => "full-stack web developer"
                              }
                            ]
                          },
                          {
-                           :title => "The Grand Winner: kidtoken",
-                           :description => "It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.",
-                           :youtube_img => "https://dummyimage.com/640x360/ada4ad/121429",
-                           :youtube_link => "https://www.youtube.com/embed/lBKMmCQVUdo?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :title => 'Best "do good" PoC: ReadIt',
+                           :description => "ReadIt's mission is to reduce illiteracy by providing a scalable reading program that enhances the tracking & reward program by leveraging WebUI & Blockchain integration.",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
+                           :youtube_link => "https://www.youtube.com/embed/iKD4jAyXq4A?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :project_link => "https://jshin2000.wixsite.com/readitprogram",
                            :participants => [
                              {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
+                               :title => "John Shin",
+                               :type  => "Sales Engineer"
                              },
                              {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
-                             },
-                             {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
-                             },
-                             {
-                               :title => "Kevin Estrada",
-                               :type  => "CEO"
+                               :title => "Adam Wilhelmi",
+                               :type  => "Software Engineer"
                              }
                            ]
                          }
@@ -149,7 +131,7 @@
             </div>
             <div class="col-12 col-md-5">
               <p class="mt-3 mt-md-0"><%= data[:description]%></p>
-              <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
+              <a href="<%= data[:project_link]%>" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
               <% if data[:participants].present? %>
                 <div class="participants-container blue mt-4">
                   <p class="mb-2 partners-title">PARTICIPANTS</p>
@@ -192,7 +174,7 @@
             </div>
             <div class="col-12 col-md-5 order-sm-1">
               <p class="mt-3 mt-md-0"><%= data[:description]%></p>
-              <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
+              <a href="<%= data[:project_link]%>" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
               <% if data[:participants].present? %>
                 <div class="participants-container sky-blue mt-4">
                   <p class="mb-2 partners-title">PARTICIPANTS</p>
