--- a/app/views/web/ost/winners/_stats.erb
+++ b/app/views/web/ost/winners/_stats.erb
@@ -19,23 +19,23 @@
             <div class="col-11 col-md-6 col-lg-3 my-3 stats-icons-wrap mx-auto">
               <svg class="align-middle descriptive-icons" >
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-countries-icon"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-days-icon"></use>
                 </switch>
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d2">0</h4>
-                <small class="stats-desc">COUNTRIES</small>
+                <small class="stats-desc">DAYS</small>
               </div>
             </div>
             <div class="col-11 col-md-6 col-lg-3 my-3 stats-icons-wrap mx-auto">
               <svg class="align-middle descriptive-icons" >
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-days-icon"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-countries-icon"></use>
                 </switch>
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d3">0</h4>
-                <small class="stats-desc">DAYS</small>
+                <small class="stats-desc">COUNTRIES</small>
               </div>
             </div>
             <div class="col-11 col-md-6 col-lg-3 my-3 stats-icons-wrap mx-auto">
@@ -60,7 +60,7 @@
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d5">0</h4>
-                <small class="stats-desc">AWARDED IN TOTAL</small>
+                <small class="stats-desc">FOR SUCCESSFUL POCs</small>
               </div>
             </div>
             <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
@@ -71,7 +71,7 @@
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d6">0</h4>
-                <small class="stats-desc">GRAND WINNER POC</small>
+                <small class="stats-desc">READY-TO-SHIP-POC</small>
               </div>
             </div>
             <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
@@ -82,7 +82,7 @@
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d7">0</h4>
-                <small class="stats-desc">SPECIAL RECOGNITION</small>
+                <small class="stats-desc">OST IN TOTAL</small>
               </div>
             </div>
             <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
@@ -93,7 +93,7 @@
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d8">0</h4>
-                <small class="stats-desc">PER SUCCESSFUL POC</small>
+                <small class="stats-desc">SPECIAL RECOGNITIONS</small>
               </div>
             </div>
           </div>
