--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid">
+<section class="container-fluid" id="subscribe">
   <div class="row container-contact-us py-5">
     <div class="container mx-auto">
       <div class="row">
@@ -97,8 +97,8 @@
                     </use>
                   </switch>
                 </svg>
-                <h5>Thank you for contacting us.</h5>
-                <h5>We have received your request and our team will get back to you very soon.</h5>
+                <h5>Thank you for signing up.</h5>
+                <h5>We will inform you know as soon as OST KIT⍺ Phase III is open for applications!</h5>
                 <button class="btn btn-primary mt-4" title="Close" data-dismiss="modal">Close</button>
               </div>
             </div>
