--- a/app/views/web/ost/winners/_jumbotron.erb
+++ b/app/views/web/ost/winners/_jumbotron.erb
@@ -8,8 +8,8 @@
           OST KIT⍺ Phase II is an opportunity for developers to build a Proof Of Concept (POC) coded integration between their website/app/platform and the OST KIT blockchain toolkit. A huge thank you to all applicants, participants, and winners for the challenge!
         </p>
         <!--TODO: change link for winners-->
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See The Winners">SEE THE WINNERS</a>
-        <a href="#developerresources" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="SIGN UP FOR ALPHA III">SIGN UP FOR ALPHA III</a>
+        <a href="#winners" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See The Winners">SEE THE WINNERS</a>
+        <a href="#subscribe" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="SIGN UP FOR ALPHA III">SIGN UP FOR ALPHA III</a>
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
