--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -106,94 +106,96 @@
           ]
 %>
 
- <% side_by_side.each_with_index do |data, index| %>
+  <div id="winners">
+   <% side_by_side.each_with_index do |data, index| %>
 
-    <% if index%2 == 0 %>
-      <div class="row pt-5 side-by-side bg-blue">
-        <div class="container">
-          <h3 class="mb-4"><%= data[:title]%></h3>
-          <div class="row">
-            <div class="col-12 col-md-7 play-video">
-              <div class="video-image">
-                <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="" />
-                <div class="play">
-                  <svg class="svg-play">
-                    <switch>
-                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#video-play-icon"></use>
-                    </switch>
-                  </svg>
-                </div>
-              </div>
-              <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
-                <iframe class="embed-responsive-item" data-src="<%= data[:youtube_link]%>"
-                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-            </div>
-            <div class="col-12 col-md-5">
-              <p class="mt-3 mt-md-0"><%= data[:description]%></p>
-              <a href="<%= data[:project_link]%>" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
-              <% if data[:participants].present? %>
-                <div class="participants-container blue mt-4">
-                  <p class="mb-2 partners-title">PARTICIPANTS</p>
-                  <div class="participants-carousel">
-                    <% data[:participants].each_with_index do |data, index| %>
-                      <div class="item">
-                        <div class="participants-title text-truncate"><%= data[:title]%></div>
-                        <small class="font-weight-light"><%= data[:type]%></small>
-                      </div>
-                    <%end%>
+      <% if index%2 == 0 %>
+        <div class="row pt-5 side-by-side bg-blue">
+          <div class="container">
+            <h3 class="mb-4"><%= data[:title]%></h3>
+            <div class="row">
+              <div class="col-12 col-md-7 play-video">
+                <div class="video-image">
+                  <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="" />
+                  <div class="play">
+                    <svg class="svg-play">
+                      <switch>
+                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#video-play-icon"></use>
+                      </switch>
+                    </svg>
                   </div>
                 </div>
-              <%end%>
+                <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
+                  <iframe class="embed-responsive-item" data-src="<%= data[:youtube_link]%>"
+                          frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+              </div>
+              <div class="col-12 col-md-5">
+                <p class="mt-3 mt-md-0"><%= data[:description]%></p>
+                <a href="<%= data[:project_link]%>" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
+                <% if data[:participants].present? %>
+                  <div class="participants-container blue mt-4">
+                    <p class="mb-2 partners-title">PARTICIPANTS</p>
+                    <div class="participants-carousel">
+                      <% data[:participants].each_with_index do |data, index| %>
+                        <div class="item">
+                          <div class="participants-title text-truncate"><%= data[:title]%></div>
+                          <small class="font-weight-light"><%= data[:type]%></small>
+                        </div>
+                      <%end%>
+                    </div>
+                  </div>
+                <%end%>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-     <% else %>
+       <% else %>
 
-      <div class="row side-by-side bg-sky-blue position-relative pt-5">
-        <div class="ost-backward-triangle"></div>
-        <div class="container py-5">
-          <h3 class="my-5"><%= data[:title]%></h3>
-          <div class="row">
-            <div class="col-12 col-md-7 play-video order-sm-12">
-              <div class="video-image">
-                <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="" />
-                <div class="play">
-                  <svg class="svg-play">
-                    <switch>
-                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#video-play-icon"></use>
-                    </switch>
-                  </svg>
-                </div>
-              </div>
-              <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
-                <iframe class="embed-responsive-item" data-src="<%= data[:youtube_link]%>"
-                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-            </div>
-            <div class="col-12 col-md-5 order-sm-1">
-              <p class="mt-3 mt-md-0"><%= data[:description]%></p>
-              <a href="<%= data[:project_link]%>" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
-              <% if data[:participants].present? %>
-                <div class="participants-container sky-blue mt-4">
-                  <p class="mb-2 partners-title">PARTICIPANTS</p>
-                  <div class="participants-carousel">
-                    <% data[:participants].each_with_index do |data, index| %>
-                      <div class="item">
-                        <div class="participants-title text-truncate"><%= data[:title]%></div>
-                        <small class="font-weight-light"><%= data[:type]%></small>
-                      </div>
-                    <%end%>
+        <div class="row side-by-side bg-sky-blue position-relative pt-5">
+          <div class="ost-backward-triangle"></div>
+          <div class="container py-5">
+            <h3 class="my-5"><%= data[:title]%></h3>
+            <div class="row">
+              <div class="col-12 col-md-7 play-video order-sm-12">
+                <div class="video-image">
+                  <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="" />
+                  <div class="play">
+                    <svg class="svg-play">
+                      <switch>
+                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#video-play-icon"></use>
+                      </switch>
+                    </svg>
                   </div>
                 </div>
-              <%end%>
+                <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
+                  <iframe class="embed-responsive-item" data-src="<%= data[:youtube_link]%>"
+                          frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+              </div>
+              <div class="col-12 col-md-5 order-sm-1">
+                <p class="mt-3 mt-md-0"><%= data[:description]%></p>
+                <a href="<%= data[:project_link]%>" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
+                <% if data[:participants].present? %>
+                  <div class="participants-container sky-blue mt-4">
+                    <p class="mb-2 partners-title">PARTICIPANTS</p>
+                    <div class="participants-carousel">
+                      <% data[:participants].each_with_index do |data, index| %>
+                        <div class="item">
+                          <div class="participants-title text-truncate"><%= data[:title]%></div>
+                          <small class="font-weight-light"><%= data[:type]%></small>
+                        </div>
+                      <%end%>
+                    </div>
+                  </div>
+                <%end%>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-     <% end %>
-  <% end %>
+       <% end %>
+    <% end %>
+  </div>
 
 </section>
 
