--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -4,7 +4,7 @@
     <div class="container text-center">
       <h3>The Challenge</h3>
       <p>OST KIT⍺ Phase II is a developer-focused private Alpha in which accepted developers will be given access to a sandbox environment of OST KIT where they can integrate any website or app to build a Proof of Concept (POC). Development teams applied by submitting a description of their proposed POC project and their team’s capabilities to us by 6 April, 2018. Each team needed to submit a summary of their POC, a halfway status update video and final accompanying video that addressed highlighted the team's vision for the POC as well as showing a working live demo running transactions using OST KIT.</p>
-      <p>For more details on the rules of eligibility for Alpha Phase II, read our kickoff blog post.</p>
+      <p>For more details on the rules of eligibility for Alpha Phase II, read our kickoff <a href="https://medium.com/ostdotcom/kicking-off-ost-kit-phase-ii-developer-proofs-of-concept-challenge-5f2987f92a97" class="link" target="_blank" title="Blog Post">blog post</a>.</p>
     </div>
   </div>
 
@@ -13,7 +13,7 @@
   side_by_side =  [{
                            :title => "Ready-to-ship PoC: Kwanda",
                            :description => "Kwanda is a Q&A platform with a built in token economy. Users can set a specific reward value to a question allowing for receiveing and rewarding more high quality answers.",
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda.png",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda-1.png",
                            :youtube_link => "https://www.youtube.com/embed/j9E90BxUBoI?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
                            :project_link => "http://kwanda.me",
                            :participants => [
