--- a/app/views/web/ost/winners/_news_carousel.erb
+++ b/app/views/web/ost/winners/_news_carousel.erb
@@ -83,74 +83,54 @@
 
 
           ost.winner.newsCarousel.init(
-              [
-                  {
-                      title: "Simple Token is hiring",
-                      video_embed: "https://www.youtube.com/embed/9-HLoYrQK4g?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/9-HLoYrQK4g/maxresdefault.jpg",
-                      date: "5 Jan 2018",
-                  },
-                  {
-                      title: "Live End-to-End Demo of Simple Token OpenST Implementation",
-                      video_embed: "https://www.youtube.com/embed/-SxJ8c1Xh_A?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/-SxJ8c1Xh_A/maxresdefault.jpg",
-                      date: "8 Nov 2017",
-                  },
-                  {
-                      title: "Simple Token founder Jason Goldberg keynotes the World Blockchain Forum",
-                      video_embed: "https://www.youtube.com/embed/mEleBd9b8gA?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/mEleBd9b8gA/maxresdefault.jpg",
-                      date: "3 Nov 2017",
-                  },
-                  {
-                      title: "OpenST Protocol and Platform Released to the Public under Open-Source Licenses",
-                      video_embed: "https://www.youtube.com/embed/ZBcVAH1yAZ0?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/ZBcVAH1yAZ0/maxresdefault.jpg",
-                      date: "28 Oct 2017",
-                  },
-                  {
-                      title: "Simple Token Finalizes Token Sale Price, Launches 'Proof of Support' Program, Announces Advisors",
-                      video_embed: "https://www.youtube.com/embed/9OP7Q8uzjjg?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/9OP7Q8uzjjg/maxresdefault.jpg",
-                      date: "25 Oct 2017",
-                  },
-                  {
-                      title: "Simple Token Technical Talk: Blockchain & Side-Chain Process",
-                      video_embed: "https://www.youtube.com/embed/W8iedA2dQKs?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/W8iedA2dQKs/maxresdefault.jpg",
-                      date: "23 Oct 2017",
-                  },
-                  {
-                      title: "Simple Token Technical Talk: Blockchain & Side-Chain Process",
-                      video_embed: "https://www.youtube.com/embed/D4z13HqRjFU?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/D4z13HqRjFU/maxresdefault.jpg",
-                      date: "23 Oct 2017",
-                  },
-                  {
-                      title: "Epicenter - Bringing Tokens to Mainstream Consumer Applications",
-                      video_embed: "https://www.youtube.com/embed/c8swtDtappM?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/c8swtDtappM/maxresdefault.jpg",
-                      date: "11 Oct 2017",
-                  },
-                  {
-                      title: "Jason Goldberg intros Simple Token for apps to launch branded crytpo tokens",
-                      video_embed: "https://www.youtube.com/embed/7aY5R1yXhwA?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/7aY5R1yXhwA/maxresdefault.jpg",
-                      date: "3 Oct 2017",
-                  },
-                  {
-                      title: "CEO Jason Goldberg at Immutable Blockchain Summit",
-                      video_embed: "https://www.youtube.com/embed/qz8LhpKCsw0?rel=0&autoplay=1",
-                      image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/simple-token-video-poster-qz8LhpKCsw0.png",
-                      date: "26 Sep 2017",
-                  },
-                  {
-                      title: "Simple Token CEO Jason Goldberg @ Immutable Blockchain Summit 2017, Hong Kong",
-                      video_embed: "https://www.youtube.com/embed/qz8LhpKCsw0?rel=0&autoplay=1",
-                      image: "https://img.youtube.com/vi/qz8LhpKCsw0/maxresdefault.jpg",
-                      date: "26 Sep 2017",
-                  },
-              ]
+            [
+              {
+                title: "#OSTa2 — Halfway Video Updates",
+                article_link: "https://medium.com/ostdotcom/osta2-halfway-video-updates-4716fa05be38",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/osta2-halfway-video-updates.jpg",
+                date: "7 May 2018",
+              },
+              {
+                title: "Kicking off OST KIT⍺ Phase II: Developer Proofs of Concept Challenge",
+                article_link: "https://medium.com/ostdotcom/kicking-off-ost-kit-phase-ii-developer-proofs-of-concept-challenge-5f2987f92a97",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/Kicking-off-OST-KIT-PhaseII.jpg",
+                date: "16 Apr 2018",
+              },
+              {
+                title: "Introducing #OSTa2 Projects (Pt. 1)",
+                article_link: "https://medium.com/ostdotcom/introducing-osta2-projects-pt-1-744e60cb806d",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-1.jpg",
+                date: "24 Apr 2018",
+              },
+
+              {
+                title: "14 More #OSTa2 Projects (Pt. 2)",
+                article_link: "https://medium.com/ostdotcom/14-more-osta2-projects-pt-2-d74348d47aa3",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-2.jpg",
+                date: "25 Apr 2018",
+              },
+
+              {
+                title: "14 more #OSTa2 Projects (Pt. 4)",
+                article_link: "https://medium.com/ostdotcom/14-more-osta2-projects-pt-4-b3592975a2f8",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-4.jpg",
+                date: "27 Apr 2018",
+              },
+
+              {
+                title: "Another 14 #OSTa2 Projects (Pt. 5)",
+                article_link: "https://medium.com/ostdotcom/another-14-osta2-projects-pt-5-159c5db23c48",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-5.jpg",
+                date: "30 Apr 2018",
+              },
+              {
+                title: "The next 14 #OSTa2 Projects (Pt. 6)",
+                article_link: "https://medium.com/ostdotcom/the-next-14-osta2-projects-pt-6-b6546a830111",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-6.jpg",
+                date: "1 May 2018",
+              },
+
+            ]
           )
       });
 
