--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -1,9 +1,34 @@
+// Import theme variables
+@import "../../ost_theme/variables";
+
 html,
 body{
   font-family: 'Quasimoda', sans-serif !important;
 }
 h1, h2, h3, h4, h5, h6{
   font-weight: 700!important;
+}
+
+// Uber banner CSS
+.uber-banner-winners{
+  background-image: linear-gradient(272deg, #27b9d2, $teal);
+  padding-top: 12px;
+  padding-bottom: 12px;
+  letter-spacing: 0.6px;
+  a{
+    color: $white;
+    outline: none;
+    font-weight: $font-weight-light;
+  }
+  .svg-megaphone{
+    fill: $white;
+    @media (min-width: map-get($grid-breakpoints, "md")){
+      height: 25px;
+      width: 25px;
+    }
+    height: 25px;
+    width: 30px;
+  }
 }
 
 .container-jumbotron{
