--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -65,7 +65,7 @@
                            :description => "The goal of HARD is to replace the use of in-game fiat currency. The biggest advantage of a blockchain based economy is that the users are the real owners of their tokens and that it’s transparent how each user is interacting with the economy. Users can use HARD across multiple games and they can make sure that tokens will not disappear, so they are more motivated to convert real money to tokens.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-hard-gaming.png",
                            :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
-                           :project_link => "https://www.kidtoken.org",
+                           :project_link => "javascript:void()",
                            :participants => [
                              {
                                :title => "David Rios",
