--- a/app/views/web/ost/index/_uber_banner.erb
+++ b/app/views/web/ost/index/_uber_banner.erb
@@ -6,7 +6,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#uber-banner-megaphone-icon"></use>
         </switch>
       </svg>
-      <a href="/challenges" class="align-middle">Announcing Alpha Phase II POC Winners! Over 3.5MM OST awarded! Check out the 60+ projects that completed our latest challenge.</a>
+      <a href="/challenges" class="align-middle" title="Announcing Alpha Phase II POC Winners!">Announcing Alpha Phase II POC Winners! Over 3.5MM OST awarded! Check out the 60+ projects that completed our latest challenge.</a>
     </div>
   </div>
 </div>
@@ -19,7 +19,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#uber-banner-megaphone-icon"></use>
         </switch>
       </svg>
-      <a href="/challenges" class="align-middle">Announcing POC Alpha II Winners!</a>
+      <a href="/challenges" class="align-middle" title="Announcing Alpha Phase II POC Winners!">Announcing POC Alpha II Winners!</a>
     </div>
   </div>
 </div>
