--- a/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
+++ b/app/assets/stylesheets/web/ost/winners/Side_by_side.scss
@@ -49,6 +49,8 @@
     left: 0;
     bottom: 0;
     margin: auto;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
     .svg-play{
       width: 15px;
       height: 20px;
