--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -125,9 +125,7 @@
                     </svg>
                   </div>
                 </div>
-                <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
-                  <iframe class="embed-responsive-item" data-src="<%= data[:youtube_link]%>"
-                          frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="<%= data[:youtube_link]%>" hidden>
                 </div>
               </div>
               <div class="col-12 col-md-5">
@@ -168,9 +166,7 @@
                     </svg>
                   </div>
                 </div>
-                <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
-                  <iframe class="embed-responsive-item" data-src="<%= data[:youtube_link]%>"
-                          frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="<%= data[:youtube_link]%>" hidden>
                 </div>
               </div>
               <div class="col-12 col-md-5 order-sm-1">
