changes suggested by nike

--- a/app/views/web/ost/winners/_news_carousel.erb
+++ b/app/views/web/ost/winners/_news_carousel.erb
@@ -1,13 +1,13 @@
 <section class="container-fluid container-carousel bg-image news-container-carousel">
   <div class="row">
     <div class="container">
-      <h2 class="pl-2 my-4">
+      <h3 class="pl-2 my-4">
         <svg class="ost-nav-logo">
           <switch>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-logo"></use>
           </switch>
-        </svg>&nbsp;news
-      </h2>
+        </svg>&nbsp;POC updates
+      </h3>
       <div id="home-carousel-wrapper" class="pb-5">
         <script id="one-el-carousel" type="text/x-handlebars-template">
           <div class="w-100 one-el-wrapper">
