--- a/app/views/web/ost/winners/_jumbotron.erb
+++ b/app/views/web/ost/winners/_jumbotron.erb
@@ -5,7 +5,7 @@
       <div class="col-md-12 col-lg-6">
         <h3 class="font-weight-bold">OST KIT⍺: Phase II Proof of Concept Developer Challenge</h3>
         <p class="mt-3">
-          OST KIT⍺ Phase II is an opportunity for developers to build a Proof Of Concept (POC) coded integration between their website/app/platform and the OST KIT blockchain toolkit. A huge thank you to all applicants, participants, and winners for the challenge!
+          OST KIT⍺ Phase II was an opportunity for developers to build a Proof Of Concept (POC) coded integration between their website, app or platform and the OST KIT blockchain toolkit. A huge thank you to all applicants, participants and winners for the challenge!
         </p>
         <!--TODO: change link for winners-->
         <a href="#winners" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See The Winners">SEE THE WINNERS</a>
