--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -4,18 +4,19 @@
     <div class="container text-center">
       <h3>The Challenge</h3>
       <p>OST KIT⍺ Phase II is a developer-focused private Alpha in which accepted developers will be given access to a sandbox environment of OST KIT where they can integrate any website or app to build a Proof of Concept (POC). Development teams applied by submitting a description of their proposed POC project and their team’s capabilities to us by 6 April, 2018. Each team needed to submit a summary of their POC, a halfway status update video and final accompanying video that addressed highlighted the team's vision for the POC as well as showing a working live demo running transactions using OST KIT.</p>
-      <p>For more details on the rules of eligibility for Alpha Phase II, read our kickoff <a href="https://medium.com/ostdotcom/kicking-off-ost-kit-phase-ii-developer-proofs-of-concept-challenge-5f2987f92a97" class="link" target="_blank" title="Blog Post">blog post</a>.</p>
+      <a href="https://drive.google.com/open?id=1KcQPaKo5rtqFnczRBW_VoaQhwYgo2aMa" target="_blank">For more details on the rules of eligibility for Alpha Phase II, read our kickoff blog post</a>.
     </div>
   </div>
 
 <%
 
   side_by_side =  [{
-                           :title => "Ready-to-ship PoC: Kwanda",
+                           :title => "Ship It: Kwanda",
                            :description => "Kwanda is a Q&A platform with a built in token economy. Users can set a specific reward value to a question allowing for receiveing and rewarding more high quality answers.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda-1.png",
                            :youtube_link => "https://www.youtube.com/embed/j9E90BxUBoI?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
                            :project_link => "http://kwanda.me",
+                           :project_link_name => "KWANDA",
                            :participants => [
                            {
                                :title => "Marc Heiduk",
@@ -31,8 +32,9 @@
                            :title => "Best motion picture: kidToken",
                            :description => "kidtoken is the first tokenized cryptocurrency for kids that also offers parents & teachers the ability to incentivize positive behaviors such as good grades, kindness and eating healthy. The platform is a scalable concept aimed at a massive audience, one that’s growing up familiar with digital economies.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
-                           :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :youtube_link => "https://www.youtube.com/embed/fDTxlPmCSyc?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
                            :project_link => "https://www.kidtoken.org",
+                           :project_link_name => "KIDTOKEN",
                            :participants => [
                            {
                                :title => "Scott Connors",
@@ -61,11 +63,12 @@
                            ]
                          },
                          {
-                           :title => "Best UX: David Rios, Senior Game Developer",
+                           :title => "Best User Experience: HARD Gaming",
                            :description => "The goal of HARD is to replace the use of in-game fiat currency. The biggest advantage of a blockchain based economy is that the users are the real owners of their tokens and that it’s transparent how each user is interacting with the economy. Users can use HARD across multiple games and they can make sure that tokens will not disappear, so they are more motivated to convert real money to tokens.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-hard-gaming.png",
                            :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
                            :project_link => "javascript:void()",
+                           :project_link_name => "HARD GAMING",
                            :participants => [
                              {
                                :title => "David Rios",
@@ -79,6 +82,7 @@
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-coner.png",
                            :youtube_link => "https://www.youtube.com/embed/G-bMkp8tm-A?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
                            :project_link => "https://coner-viewer.herokuapp.com/viewer",
+                           :project_link_name => "CONER",
                            :participants => [
                              {
                                :title => "Daniel Vliegenthart",
@@ -87,11 +91,12 @@
                            ]
                          },
                          {
-                           :title => 'Best "do good" PoC: ReadIt',
+                           :title => 'Best "Do-Good" PoC: ReadIt',
                            :description => "ReadIt's mission is to reduce illiteracy by providing a scalable reading program that enhances the tracking & reward program by leveraging WebUI & Blockchain integration.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
                            :youtube_link => "https://www.youtube.com/embed/iKD4jAyXq4A?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
                            :project_link => "https://jshin2000.wixsite.com/readitprogram",
+                           :project_link_name => "READIT",
                            :participants => [
                              {
                                :title => "John Shin",
@@ -130,7 +135,7 @@
               </div>
               <div class="col-12 col-md-5">
                 <p class="mt-3 mt-md-0"><%= data[:description]%></p>
-                <a href="<%= data[:project_link]%>" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
+                <a href="<%= data[:project_link]%>" class="link" target="_blank" title="READ MORE ABOUT <%= data[:project_link_name]%>">READ MORE ABOUT <%= data[:project_link_name]%></a>
                 <% if data[:participants].present? %>
                   <div class="participants-container blue mt-4 <%= data[:participants].length > 2 ? "slick-slider-min" : "" %>">
                     <p class="mb-2 partners-title">PARTICIPANTS</p>
@@ -171,7 +176,7 @@
               </div>
               <div class="col-12 col-md-5 order-sm-1">
                 <p class="mt-3 mt-md-0"><%= data[:description]%></p>
-                <a href="<%= data[:project_link]%>" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
+                <a href="<%= data[:project_link]%>" class="link" target="_blank" title="READ MORE ABOUT <%= data[:project_link_name]%>">READ MORE ABOUT <%= data[:project_link_name]%></a>
                 <% if data[:participants].present? %>
                   <div class="participants-container sky-blue mt-4 <%= data[:participants].length > 2 ? "slick-slider-min" : "" %>">
                     <p class="mb-2 partners-title">PARTICIPANTS</p>
