--- a/app/views/web/ost/winners/_stats.erb
+++ b/app/views/web/ost/winners/_stats.erb
@@ -71,7 +71,7 @@
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d6">0</h4>
-                <small class="stats-desc">READY-TO-SHIP-POC</small>
+                <small class="stats-desc">SPECIAL RECOGNITIONS</small>
               </div>
             </div>
             <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
@@ -82,7 +82,7 @@
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d7">0</h4>
-                <small class="stats-desc">OST IN TOTAL</small>
+                <small class="stats-desc">SHIP IT!</small>
               </div>
             </div>
             <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
@@ -93,7 +93,7 @@
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d8">0</h4>
-                <small class="stats-desc">SPECIAL RECOGNITIONS</small>
+                <small class="stats-desc">OST IN TOTAL</small>
               </div>
             </div>
           </div>
