--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -4,14 +4,14 @@
     <div class="container text-center">
       <h3>The Challenge</h3>
       <p>OST KIT⍺ Phase II is a developer-focused private Alpha in which accepted developers will be given access to a sandbox environment of OST KIT where they can integrate any website or app to build a Proof of Concept (POC). Development teams applied by submitting a description of their proposed POC project and their team’s capabilities to us by 6 April, 2018. Each team needed to submit a summary of their POC, a halfway status update video and final accompanying video that addressed highlighted the team's vision for the POC as well as showing a working live demo running transactions using OST KIT.</p>
-      <a href="https://drive.google.com/open?id=1KcQPaKo5rtqFnczRBW_VoaQhwYgo2aMa" target="_blank">For more details on the rules of eligibility for Alpha Phase II, read our kickoff blog post</a>.
+      <a href="https://drive.google.com/open?id=1KcQPaKo5rtqFnczRBW_VoaQhwYgo2aMa" class="the-challenge-link" target="_blank">For more details on the rules of eligibility for Alpha Phase II, read our kickoff blog post</a>.
     </div>
   </div>
 
 <%
 
   side_by_side =  [{
-                           :title => "Ship It: Kwanda",
+                           :title => '"Ship It!": Kwanda',
                            :description => "Kwanda is a Q&A platform with a built in token economy. Users can set a specific reward value to a question allowing for receiveing and rewarding more high quality answers.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda-1.png",
                            :youtube_link => "https://www.youtube.com/embed/j9E90BxUBoI?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
@@ -29,7 +29,7 @@
                           ]
                         },
                          {
-                           :title => "Best motion picture: kidToken",
+                           :title => "Best Motion Picture: kidtoken",
                            :description => "kidtoken is the first tokenized cryptocurrency for kids that also offers parents & teachers the ability to incentivize positive behaviors such as good grades, kindness and eating healthy. The platform is a scalable concept aimed at a massive audience, one that’s growing up familiar with digital economies.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
                            :youtube_link => "https://www.youtube.com/embed/fDTxlPmCSyc?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
@@ -63,7 +63,7 @@
                            ]
                          },
                          {
-                           :title => "Best User Experience: HARD Gaming",
+                           :title => "Best UX: HARD Gaming",
                            :description => "The goal of HARD is to replace the use of in-game fiat currency. The biggest advantage of a blockchain based economy is that the users are the real owners of their tokens and that it’s transparent how each user is interacting with the economy. Users can use HARD across multiple games and they can make sure that tokens will not disappear, so they are more motivated to convert real money to tokens.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-hard-gaming.png",
                            :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
@@ -77,7 +77,7 @@
                            ]
                          },
                          {
-                           :title => "Most innovative: Coner",
+                           :title => "Most Innovative: Coner",
                            :description => "The motivation behind Coner is the problem of limited efficiency of publications search in digital libraries. Coner is an interactive document viewer that visualises automatically extracted keywords in research papers and allows users to rate and add new keywords.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-coner.png",
                            :youtube_link => "https://www.youtube.com/embed/G-bMkp8tm-A?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
@@ -91,7 +91,7 @@
                            ]
                          },
                          {
-                           :title => 'Best "Do-Good" PoC: ReadIt',
+                           :title => 'Best "Do Good": ReadIt',
                            :description => "ReadIt's mission is to reduce illiteracy by providing a scalable reading program that enhances the tracking & reward program by leveraging WebUI & Blockchain integration.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
                            :youtube_link => "https://www.youtube.com/embed/iKD4jAyXq4A?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
