--- a/app/views/web/ost/winners/_jumbotron.erb
+++ b/app/views/web/ost/winners/_jumbotron.erb
@@ -3,7 +3,7 @@
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h3 class="font-weight-bold">OST KIT⍺: Phase II Proof of Concept Developer Challenge</h3>
+        <h3 class="font-weight-bold">OST Alpha II Developer Challenge Winners!</h3>
         <p class="mt-3">
           OST KIT⍺ Phase II was an opportunity for developers to build a Proof Of Concept (POC) coded integration between their website, app or platform and the OST KIT blockchain toolkit. A huge thank you to all applicants, participants and winners for the challenge!
         </p>
