--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -3,7 +3,8 @@
     <div class="container mx-auto">
       <div class="row">
         <div class="col-12 mx-auto text-center">
-          <h3 class="mb-5">Sign Up for OST Alpha III</h3>
+          <h3 class="mb-3">Sign Up for OST Alpha III</h3>
+          <p class="mb-5">Participate in the next OST challenge and get the chance to be the first to try the new upcoming OST KIT features and APIs, get noticed in the OST Community and win amazing rewards in OST.</p>
         </div>
       </div>
       <div class="row">
