--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -16,6 +16,7 @@
           <h6 class="text-uppercase">Developers</h6>
           <ul class="footer-nav list-unstyled">
             <li><a href="https://dev.ost.com" target="_blank" title="API Reference">API Reference</a></li>
+            <li><a href="<%= GlobalConstant::Base.root_url %>challenges" title="Dev Challenges">Dev Challenges</a></li>
             <li><a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" title="White Paper">White Paper</a></li>
             <li><a href="https://github.com/OpenSTFoundation" target="_blank" title="GitHub">GitHub</a></li>
             <li><a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" title="Developer Chat">Developer Chat</a></li>
