--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -3,7 +3,7 @@
   <div class="row my-5 mb-3">
     <div class="container text-center">
       <h3>The Challenge</h3>
-      <p>OST KIT⍺ Phase II is a developer-focused private Alpha in which accepted developers will be given access to a sandbox environment of OST KIT where they can integrate any website or app to build a Proof of Concept (POC). Development teams applied by submitting a description of their proposed POC project and their team’s capabilities to us by 6 April, 2018. Each team needed to submit a summary of their POC, a halfway status update video and final accompanying video that addressed highlighted the team's vision for the POC as well as showing a working live demo running transactions using OST KIT.</p>
+      <p>142 Development teams from around the world competed in the OST Alpha II Challenge - an opportunity to integrate OST-powered Branded Tokens into their website or app. 3,750,000 OST tokens were awarded as prizes. Thank you to all applicants, participants and winners!</p>
       <a href="https://medium.com/ostdotcom/kicking-off-ost-kit-phase-ii-developer-proofs-of-concept-challenge-5f2987f92a97" class="the-challenge-link" target="_blank">For more details on the rules of eligibility for Alpha Phase II, read our kickoff blog post</a>.
     </div>
   </div>
